components/sections/projects/FeaturedProject.module.scss
@import "../../../styles/variables";

.featured {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    align-items: center;
    margin-bottom: 12rem;

    &__photo {
        display: flex;
        position: relative;
        z-index: 1;

        &--right {
            grid-column: 1 / 9;
            grid-row: 1 / 2;
        }

        &--left {
            grid-column: 6 / 13;
            grid-row: 1 / 2;
        }
    }

    &__image {
        border-radius: $border-radius;
        overflow: hidden;
    }

    &__content {
        position: relative;
        z-index: 2;

        &--right {
            grid-column: 7 / -1;
            grid-row: 1 / 2;
        }

        &--left {
            grid-column: 1 / 7;
            grid-row: 1 / 2;
        }
    }

    &__text {
        font-weight: 400;
        color: $color-brand;
        font-size: 1.8rem;

        &--right {
            text-align: right;
        }

        &--left {
            text-align: start;
        }
    }

    &__heading {
        display: flex;

        &--right {
            justify-content: flex-end;
        }

        &--left {
            justify-content: flex-start;
        }
    }

    &__title {
        color: $color-font-grey;
        font-size: 3.2rem;
        font-weight: 600;
        transition: $transition;

        &:hover,
        &:active {
            color: $color-brand;
        }
    }

    &__description-box {
        display: flex;
        justify-content: flex-start;
        padding: 4rem;
        border-radius: $border-radius;
        box-shadow: 0 10px 30px -15px rgba(2, 12, 27, 0.7);
        background-color: $bg-color-lighter;
        margin: 2rem 0;
    }

    &__description {
        color: $color-font-grey-dark;
        font-size: 1.6rem;
        line-height: 1.4;

        &--right {
            text-align: right;
        }

        &--left {
            text-align: start;
        }
    }

    &__list {
        list-style: none;
        color: $color-font-grey;
        font-size: 1.6rem;
        display: flex;
        gap: 3rem;
        width: 80%;

        &--right {
            margin-left: auto;
        }

        &--left {
            margin-right: auto;
        }
    }

    &__icons {
        margin-top: 2rem;
        display: flex;
        align-items: center;
        gap: 2rem;

        &--left {
            justify-content: flex-start;
        }
        &--right {
            justify-content: flex-end;
        }
    }

    &__link {
        cursor: pointer;
    }

    &__icon {
        width: 3rem;
        height: 3rem;
        transition: $transition;
        color: $color-font-grey;

        &:hover {
            color: $color-brand;
        }
    }
}

